--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>因子結合くん</title>
-    <link data-trunk rel="css" href="./node_modules/yew-styles/main.css"/>
+    <link data-trunk rel="sass" href="./node_modules/yew-styles/main.sass"/>
     <link data-trunk rel="sass" href="index.scss" />
   </head>
 </html>
