フロントの見た目を少しまともにした

--- a/front/index.html
+++ b/front/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>因子結合くん</title>
-    <link data-trunk rel="sass" href="./node_modules/yew-styles/main.sass"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>ウマウマがっちゃんこ</title>
     <link data-trunk rel="sass" href="index.scss" />
   </head>
 </html>
